<resources>
    <string name="app_name">My Application</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="doas_not_have_account">Doas not have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_screen_app">Login Screen App</string>
    <string name="login">Login</string>
    <string name="codeplayon">CodePlayon</string>
</resources>